:factory: goa gen calcsvc/design
